# cmake-tutorials

./: README.md
01 - simple/: CMakeLists.txt  main.c
02 - add libs/: CMakeLists.txt  main.c
03 - create a lib/: CMakeLists.txt
04 - more sources/: CMakeLists.txt  main.c  main.in.h
04 - more sources/lib/: mylib.c  mylib.h
05 - unit tests/: CMakeLists.txt
05 - unit tests/src/lib/: mylib.c  mylib.h
05 - unit tests/tests/: test01.c
